Corrected url links

--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <h1>Global CRM Lead List</h1>
-  <a href="/leads">Go back</a>
+  <a href="{% url 'leads:lead-list' %}">Go back</a>
   <hr>
   <p>Create a new Lead</p>
     <div class="lead">
