--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Global CRM</title>
-  <style>
-    .lead {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 6px;
-      padding-right: 6px;
-      margin-top: 10px;
-      background-color: #f6f6f6;
-      width: 100%;
-    }
-  </style>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
+
   <h1>Global CRM Lead List</h1>
   <a href="{% url 'leads:lead-list' %}">Go back</a>
   <hr>
@@ -29,5 +13,5 @@
         <input type="submit" value="Submit">
       </form>
     </div>
-</body>
-</html>
+
+{% endblock content %}
