--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -1,35 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Global CRM</title>
-  <style>
-    .lead {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 6px;
-      padding-right: 6px;
-      margin-top: 10px;
-      background-color: #f6f6f6;
-      width: 100%;
-    }
-  </style>
-</head>
-<body>
-  <h1>Global CRM Lead List</h1>
-  <p>Here are the Details of {{ lead.first_name }}</p>
-  
-    <div class="lead">
-      <p>This leads age is: {{ lead.age }}</p>
-      <p>The assigned agent is: {{ lead.agent }}</p>
+{% extends "base.html" %}
+
+{% block content %}
+
+<section class="text-gray-600 body-font overflow-hidden">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="lg:w-4/5 mx-auto flex flex-wrap">
+      <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+        <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
+        <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{lead.first_name}} {{lead.last_name}}</h1>
+        <div class="flex mb-4">
+          <a class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Overview</a>
+          <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Update Details</a>
+          <a href="#" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Review</a>
+          
+        </div>
+        <p class="leading-relaxed mb-4">To be added at a later date!</p>
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Age</span>
+          <span class="ml-auto text-gray-900">{{ lead.age }}</span>
+        </div>
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Location</span>
+          <span class="ml-auto text-gray-900">Ottawa, ON</span>
+        </div>
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Cell Phone</span>
+          <span class="ml-auto text-gray-900">1-555-555-1212</span>
+        </div>
+        <div class="flex border-t border-b mb-6 border-gray-200 py-2">
+          <span class="text-gray-500">Agent</span>
+          <span class="ml-auto text-gray-900">{{ lead.agent }}</span>
+        </div>
+      </div>
+      <img alt="lead" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
     </div>
-    <div>
-      <a href="{% url 'leads:lead-list' %}">Home</a>
-      <a href="{% url 'leads:lead-update' lead.pk %}">Update your lead</a>
-      <a href="{% url 'leads:lead-delete' lead.pk %}">Delete this lead</a>
-    </div>
-  
-</body>
-</html>
+  </div>
+</section>
+
+{% endblock content %}
