--- a/leads/templates/leads/lead_update.html
+++ b/leads/templates/leads/lead_update.html
@@ -1,33 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Global CRM</title>
-  <style>
-    .lead {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 6px;
-      padding-right: 6px;
-      margin-top: 10px;
-      background-color: #f6f6f6;
-      width: 100%;
-    }
-  </style>
-</head>
-<body>
-  <h1>Global CRM Lead List</h1>
-  <a href="{% url 'leads:lead-detail' lead.pk %}">Back to Details</a>
-  <hr>
-  <h1>Update Lead: {{ lead.first_name }} {{ lead.last_name }}</h1>
-    <div class="lead">
-      <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit">
-      </form>
+{% extends "base.html" %}
+
+{% block content %}
+  
+<section class="text-gray-600 body-font overflow-hidden">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="lg:w-4/5 mx-auto flex flex-wrap">
+      <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+        <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
+        <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{lead.first_name}} {{lead.last_name}}</h1>
+        <div class="flex mb-4">
+          <a href="{% url 'leads:lead-detail' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Overview</a>
+          <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Update Details</a>
+          <a href="#" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Review</a>
+        </div>
+        <div>
+          <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="flex mr-auto text-white bg-indigo-500 border-0 my-6 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded" type="submit">Update</button>
+          </form>
+        </div>
+        <button href="{% url 'leads:lead-delete' lead.pk %}" class="flex mr-auto mt-3 text-white bg-indigo-500 border-0 my-6 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Delete</button>
+      </div>
+      <img alt="lead" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
     </div>
-</body>
-</html>
+  </div>
+</section>
+
+{% endblock content %}
