Class Based Views

--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -32,7 +32,7 @@
           <span class="ml-auto text-gray-900">{{ lead.agent }}</span>
         </div>
       </div>
-      <img alt="lead" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
+      <img alt="lead" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://source.unsplash.com/random/400x400">
     </div>
   </div>
 </section>
