--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,4 +1,3 @@
-<script type="text/javascript">
-  const { ['log']: c } = console;
-  c('Hello World!')
-</script>
+{% load static %}
+
+<script src={% static 'js/main.js' %} type="text/javascript"></script>
