--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -9,8 +9,10 @@
         <h1 class="text-4xl text-gray-800">Leads</h1>
       </div>
       <div>
+        {% if request.user.is_organizer %}
         <a href="{% url 'leads:lead-create' %}" class="text-gray-500 hover:text-blue-500">Create a New Lead
         </a>
+        {% endif %}
       </div>
     </div>
       
