--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,9 @@
       {% if not request.user.is_authenticated %}
         <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Sign Up</a>
       {% else %}
-        <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900">Agents</a>
+        {% if request.user.is_organizer %}
+          <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900">Agents</a>
+        {% endif %}
         <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900">Leads</a>
       {% endif %}
     </nav>
