--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,13 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-  
+<h1>Enter your new password</h1>
   <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
-    <hr>
-    <a href="{% url 'reset-password' %}">Forgot your password?</a>
+    <button type="submit">Confirm your new password</button>
   </form>
-
 {% endblock content %}
