--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,7 +10,7 @@
       <p class="mb-8 leading-relaxed">Manage your Leads and Agents from a single location</p>
       <div class="flex justify-center">
         <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="{% url 'leads:lead-list' %}">Leads</a></button>
-        <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Agents</button>
+        <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"><a href="{% url 'agents:agent-list' %}">Agents</a></button>
       </div>
     </div>
   </div>
