--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-<h1>Enter your new password</h1>
+<h1 class="text-gray-900 text-3xl title-font font-medium pt-4 mb-4">Enter your new password</h1>
+<div class="max-w-lg mx-auto">
   <form action="" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Confirm your new password</button>
+    {{ form|crispy }}
+    <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white">Confirm your new password</button>
   </form>
+</div>
+  
 {% endblock content %}
