--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-  
+<div class="max-w-lg mx-auto">
+  <h1 class="text-gray-900 text-3xl title-font font-medium pt-4 mb-4">Forgot your password?</h1>
   <form action="" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Send Reset Email</button>
-    <hr>
-    <a href="{% url 'login' %}">Already have an account?</a>
+    {{ form|crispy }}
+    <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white">Send Reset Email</button>
   </form>
+  <div class="py-3 my-3 border-t border-gray-500">
+    <a class="hover:text-blue-500" href="{% url 'login' %}">Already have an account?</a>
+  </div>
+</div>
 
 {% endblock content %}
