--- a/agents/templates/agents/agent_update.html
+++ b/agents/templates/agents/agent_update.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
@@ -16,12 +17,13 @@
         <div>
           <form action="" method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button class="flex mr-auto text-white bg-indigo-500 border-0 my-6 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded" type="submit">Submit Update</button>
-
+            {{ form|crispy }}
+            <button class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white" type="submit">Submit Update</button>
           </form>
         </div>
-        <a href="{% url 'agents:agent-delete' agent.pk %}" class="flex mr-auto mt-3 w-1/2 text-white bg-indigo-500 border-0 my-6 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Delete</a>
+        <div class="py-3 my-3 border-t border-gray-500">
+          <button class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white"><a href="{% url 'agents:agent-delete' agent.pk %}" >Delete</a></button>
+        </div>
       </div>
       <img alt="lead" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://source.unsplash.com/random/400x400">
     </div>
