--- a/leads/templates/leads/lead_category_update.html
+++ b/leads/templates/leads/lead_category_update.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load tailwind_filters %}
+
 {% block content %}
-  
+
 <section class="text-gray-600 body-font overflow-hidden">
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
@@ -10,20 +11,17 @@
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{lead.first_name}} {{lead.last_name}}</h1>
         <div class="flex mb-4">
           <a href="{% url 'leads:lead-detail' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Overview</a>
-          <a href="{% url 'leads:lead-category-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Category</a>
-          <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Update Details</a>
+          <a href="{% url 'leads:lead-category-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Category</a>
+          <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Update Details</a>
         </div>
         <div>
           <form action="" method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white" type="submit">Update</button>
+            <button class="flex mr-auto text-white bg-indigo-500 border-0 my-6 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded" type="submit">Update</button>
           </form>
         </div>
-        <div class="py-3 my-3 border-t border-gray-500">
-          <button class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white"><a href="{% url 'leads:lead-delete' lead.pk %}">Delete</a></button>
-        </div>
-        
+        <a href="{% url 'leads:lead-delete' lead.pk %}" class="flex mr-auto mt-3 w-1/2 text-white bg-indigo-500 border-0 my-6 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Delete</a>
       </div>
       <img alt="lead" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://source.unsplash.com/random/400x400">
     </div>
