--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,17 +1,20 @@
 {% extends "base.html" %}
-
+{% load tailwind_filters %}
 {% block content %}
 
-  <h1>Global CRM Lead List</h1>
-  <a href="{% url 'leads:lead-list' %}">Go back</a>
-  <hr>
-  <p>Create a new Lead</p>
-    <div class="lead">
-      <form action="" method="POST">
+<div class="max-w-lg mx-auto">
+  <h1 class="text-gray-900 text-3xl title-font font-medium pt-4 mb-4">Create a New Lead</h1>
+
+    <form action="" method="POST" class="mt-5">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit">
-      </form>
+        {{ form|crispy }}
+      <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 mb-4 rounded-md text-white">Create</button>
+    </form>
+    <div class="py-3 my-3 border-t border-gray-500">
+      <a class="hover:text-blue-500" href="{% url 'leads:lead-list' %}">Return to Leads</a>
     </div>
+    
+</div>
+  
 
 {% endblock content %}
