--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,11 +1,18 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
+  <div class="max-w-lg mx-auto">
+    <h1 class="text-gray-900 text-3xl title-font font-medium pt-4 mb-4">Global CRM Account Creation</h1>
+    <form action="" method="POST">
+      {% csrf_token %}
+      {{ form|crispy }}
+      <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white">Sign Up</button>
+    </form>
+    <div class="py-3 my-3 border-t border-gray-500">
+      <a class="hover:text-blue-500" href="{% url 'login' %}">Already have an account?</a>
+    </div>
+  </div>
   
-  <form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-  </form>
 
 {% endblock content %}
