--- a/agents/templates/agents/agent_delete.html
+++ b/agents/templates/agents/agent_delete.html
@@ -5,7 +5,7 @@
 
 <div class="max-w-lg mx-auto pb-5">
   <div class="py-3 my-3 border-b border-gray-500">
-    <a href="{% url 'agents:agent-list' %}">Go back</a>
+    <a class="hover:text-blue-500" href="{% url 'agents:agent-list' %}">Go back</a>
   </div>
   <h1 class="text-gray-900 text-2xl title-font font-medium pt-4 mb-4">Are you sure you want to delete this Agent?</h1>
   <form action="" method="POST">
