--- a/leads/templates/leads/lead_delete.html
+++ b/leads/templates/leads/lead_delete.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-
-  <h1>Global CRM Lead List</h1>
-  <a href="{% url 'leads:lead-list' %}">Go back</a>
-  <hr>
-  <p>Are you sure you want to delete this Lead?</p>
-    <div class="lead">
-      <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit">
-      </form>
-    </div>
+<div class="max-w-lg mx-auto">
+  <div class="py-3 my-3 border-b border-gray-500">
+    <a class="hover:text-blue-500" href="{% url 'leads:lead-list' %}">Go back</a>
+  </div>
+  <h2 class="text-gray-900 text-2xl title-font font-medium pt-4 mb-4">Are you sure you want to delete this Lead?</h2>
+  <form action="" method="POST">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white">Delete</button>
+  </form>
+</div>
 
 {% endblock content %}
