--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
   {% include "navbar.html" %}
 
-<div class="max-w-4xl mx-auto bg-gray-100">
+<div class="max-w-4xl mx-auto">
   {% block content %}
     
   {% endblock content %}
