--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
+
 {% block content %}
 
-<h1>Password Reset Complete</h1>
-<p>You have successfully reset your password. Click <a href="{% url 'login' %}">Here</a> to login with your new password.</p>
-  
+<div class="max-w-lg mx-auto">
+  <h1 class="text-gray-900 text-3xl title-font font-medium pt-4 mb-4">Password Reset Complete</h1>
+  <p class="mt-1 text-xl text-gray-500 truncate">You have successfully reset your password. Click <a class="hover:text-blue-500" href="{% url 'login' %}">Here</a> to login with your new password.</p>
+</div>
+
 {% endblock content %}
