--- a/agents/templates/agents/agent_delete.html
+++ b/agents/templates/agents/agent_delete.html
@@ -3,16 +3,19 @@
 
 {% block content %}
 
-<div class="max-w-lg mx-auto pb-5">
+<div class="max-w-lg mx-auto pb-4">
   <div class="py-3 my-3 border-b border-gray-500">
-    <a class="hover:text-blue-500" href="{% url 'agents:agent-list' %}">Go back</a>
+    <a class="hover:text-blue-500" href="{% url 'agents:agent-list' %}">Go back to agents</a>
   </div>
   <h1 class="text-gray-900 text-2xl title-font font-medium pt-4 mb-4">Are you sure you want to delete this Agent?</h1>
   <form action="" method="POST">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white">Delete</button>
+    <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">Delete</button>
   </form>
+  <div class="py-5 mt-5">
+    <a href="{% url 'agents:agent-detail' object.pk %}" class="hover:text-blue-500">Cancel</a>
+  </div>
 </div>
 
 {% endblock content %}
