--- a/agents/templates/agents/agent_update.html
+++ b/agents/templates/agents/agent_update.html
@@ -1,31 +1,74 @@
-{% extends "base.html" %}
-{% load tailwind_filters %}
+{% extends "base.html" %} 
+{% load tailwind_filters %} 
 
 {% block content %}
 
-<section class="text-gray-600 body-font overflow-hidden">
+<section class="text-gray-700 body-font overflow-hidden">
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+      <div class="w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
         <h2 class="text-sm title-font text-gray-500 tracking-widest">AGENT</h2>
-        <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ agent.user.username }}</h1>
+        <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">
+          {{ agent.user.username }}
+        </h1>
         <div class="flex mb-4">
-          <a href="{% url 'agents:agent-detail' agent.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Overview</a>
-          <a href="{% url 'agents:agent-update' agent.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Update Details</a>
-          <a href="#" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Review</a>
+          <a
+            href="{% url 'agents:agent-detail' agent.pk %}"
+            class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1"
+          >
+            Overview
+          </a>
+          <a
+            href="{% url 'agents:agent-update' agent.pk %}"
+            class="
+              flex-grow
+              text-indigo-500
+              border-b-2 border-indigo-500
+              py-2
+              text-lg
+              px-1
+            "
+          >
+            Update Details
+          </a>
         </div>
-        <div>
-          <form action="" method="POST">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white" type="submit">Submit Update</button>
-          </form>
-        </div>
-        <div class="py-3 my-3 border-t border-gray-500">
-          <button class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-1 rounded-md text-white"><a href="{% url 'agents:agent-delete' agent.pk %}" >Delete</a></button>
+        <form form method="post">
+          {% csrf_token %} {{ form|crispy }}
+          <button
+            type="submit"
+            class="
+              w-full
+              text-white
+              bg-blue-500
+              hover:bg-blue-600
+              px-3
+              py-2
+              rounded-md
+            "
+          >
+            Submit
+          </button>
+        </form>
+        <div class="mt-5 py-5 border-t border-gray-200">
+          <a
+            href="{% url 'agents:agent-delete' agent.pk %}"
+            class="
+              w-1/2
+              mt-3
+              text-white
+              bg-indigo-500
+              border-0
+              py-2
+              px-6
+              focus:outline-none
+              hover:bg-indigo-600
+              rounded
+            "
+          >
+            Delete
+          </a>
         </div>
       </div>
-      <img alt="lead" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://source.unsplash.com/random/400x400">
     </div>
   </div>
 </section>
