--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
   
 <section class="text-gray-600 body-font">
   <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/random/720x600">
+    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="{% static 'images/dashboard.svg' %}">
     <div class="text-center lg:w-2/3 w-full">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">CRM built with the Power of Django</h1>
-      <p class="mb-8 leading-relaxed">Manage your Leads and Agents from a single location</p>
+      <p class="mb-8 leading-relaxed">Let your Agents manage leads while you manage your agents from a single location</p>
       <div class="flex justify-center">
-        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="{% url 'leads:lead-list' %}">Leads</a></button>
-        <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"><a href="{% url 'agents:agent-list' %}">Agents</a></button>
+        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="{% url 'login' %}">Login to get Started</a></button>
+        
       </div>
     </div>
   </div>
