--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -14,7 +14,7 @@
           <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Update Details</a>
 
         </div>
-        <p class="leading-relaxed mb-4">To be added at a later date!</p>
+        <p class="leading-relaxed mb-4">{{ lead.description }}</p>
         <div class="flex border-t border-gray-200 py-2">
           <span class="text-gray-500">Age</span>
           <span class="ml-auto text-gray-900">{{ lead.age }}</span>
